--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -4,15 +4,17 @@
   gap: 1.5rem;
   justify-content: center;
   align-items: center;
+  padding: 4rem;
 }
 
 .form-title {
   font-size: 2rem;
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 .form {
-  margin-top: 15%;
   max-width: 1000px;
   display: flex;
   flex-direction: column;
@@ -20,6 +22,11 @@
   border: solid black 1px;
   border-radius: 8px;
   padding: 1rem;
+}
+
+.post-form {
+  width: 100%;
+  max-width: 1000px;
 }
 
 .form-field,
@@ -38,4 +45,11 @@
 
 .submit-button {
   align-self: center;
+}
+
+input,
+select,
+option,
+label {
+  font-size: 1.25rem;
 }
