--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  border: solid black 1px;
+  box-shadow: var(--box-shadow);
   border-radius: 8px;
   padding: 1rem;
 }
