--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -3,18 +3,23 @@
   top: 0;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 2rem;
-  padding: 0.75rem;
+  padding: 0.5rem 1.5rem;
   font-size: 1.5rem;
-  border-bottom: solid black 1px;
+  box-shadow: var(--box-shadow);
   background-color: white;
 }
 
 .link-list {
-  /* flex-grow: 1; */
   display: flex;
   gap: 2rem;
   list-style: none;
   padding: 0;
   margin-left: auto;
+}
+
+.link {
+  text-decoration: none;
+  color: inherit;
 }
