styling and layout updates

--- a/src/styles/list.css
+++ b/src/styles/list.css
@@ -1,8 +1,6 @@
 .category-list {
   box-sizing: border-box;
-  height: 3rem;
   border-radius: 1.5rem;
-  width: auto;
   margin: 0;
   padding: 0 0.25rem;
   font-size: 2rem;
@@ -10,12 +8,13 @@
   list-style: none;
   display: flex;
   align-items: center;
-  justify-content: center;
-  box-shadow: var(--box-shadow);
+  justify-content: flex-end;
 }
 
 .category-list > li {
-  height: 2.5rem;
+  background-color: transparent;
+  width: clamp(175px, 15vw, 200px);
+  /* height: 2.5rem;
   border-radius: 1.25rem;
   flex-grow: 1;
   text-align: center;
@@ -23,10 +22,12 @@
   padding: 0 1rem;
   transition:
     transform 0.25s ease,
-    box-shadow 0.25s ease;
+    box-shadow 0.25s ease,
+    background-color 0.25s ease; */
 }
 
-.category-list > li:hover {
+/* .category-list > li:hover {
   transform: translateY(-1.5px);
   box-shadow: var(--box-shadow);
-}
+  background-color: var(--color-lvl-2);
+} */
