--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -1,11 +1,34 @@
 .button {
+  width: 100%;
   font-size: 1.25rem;
-  padding: 0.25rem 0.5rem;
-  background-color: white;
-  border: solid black 1px;
+  background-color: var(--color-accent-muted);
+  box-shadow: var(--box-shadow);
+  border: none;
   outline: none;
+  height: 2.5rem;
+  border-radius: 1.25rem;
+  flex-grow: 1;
+  text-align: center;
+  box-sizing: border-box;
+  padding: 0 1rem;
+  transition:
+    transform 0.25s ease,
+    box-shadow 0.25s ease,
+    background-color 0.25s ease;
 }
 
 .button:hover {
-  background-color: rgb(160, 160, 160);
+  transform: translateY(-1.5px);
+  box-shadow: var(--box-shadow-expanded);
+  background-color: var(--color-accent);
+}
+
+.button-inactive {
+}
+.button-active {
+  background-color: var(--color-active-muted);
+}
+
+.button-active:hover {
+  background-color: var(--color-active);
 }
