--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,5 +4,26 @@ body,
   min-height: 100vh;
   margin: 0;
   padding: 0;
-  --box-shadow: 0px 3px 10px 0px rgb(100, 100, 100);
+  --box-shadow: 0px 3px 7px 0px rgb(100, 100, 100);
+  --box-shadow-expanded: 0px 5px 10px 0px rgb(100, 100, 100);
+  --color-base: rgb(245, 245, 245);
+  --color-lvl-1: rgb(230, 230, 230);
+  --color-lvl-2: rgbrgb(210, 210, 210);
+  --color-accent: rgb(30, 144, 255);
+  --color-accent-muted: rgba(30, 143, 255, 0.45);
+  --color-active: rgb(30, 255, 143);
+  --color-active-muted: rgba(30, 255, 143, 0.45);
+  background-color: var(--color-base);
+  color: rgb(33, 33, 33);
+}
+
+* {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.header {
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
