--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -8,7 +8,8 @@
   padding: 0.5rem 1.5rem;
   font-size: 1.5rem;
   box-shadow: var(--box-shadow);
-  background-color: white;
+  background-color: var(--color-lvl-1);
+  z-index: 1;
 }
 
 .link-list {
@@ -22,4 +23,5 @@
 .link {
   text-decoration: none;
   color: inherit;
+  background-color: transparent;
 }
