--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -2,24 +2,26 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2rem;
-  gap: 2rem;
+  padding: 3rem;
+  gap: 2.5rem;
 }
 
 .post-card-layout {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   max-width: 1500px;
-  gap: 2rem;
+  gap: 2.5rem;
   min-width: 0;
 }
 
 .post-card {
+  background-color: var(--color-lvl-1);
   max-width: 450px;
   display: flex;
   flex-direction: column;
   -webkit-box-shadow: 0px 3px 10px 0px rgb(100, 100, 100);
   box-shadow: var(--box-shadow);
+  border-radius: 0.5rem;
   transition:
     transform 0.25s ease,
     box-shadow 0.25s ease;
@@ -45,6 +47,7 @@
 }
 
 .card-image {
+  border-radius: 0.5rem 0.5rem 0 0;
   height: 100%;
   width: 100%;
   object-fit: cover;
@@ -69,14 +72,33 @@
 }
 
 .post-layout {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
   min-width: 0;
   font-size: 1.25rem;
   max-width: 1000px;
+}
+
+.post-contents {
+  background-color: var(--color-lvl-1);
+  box-shadow: var(--box-shadow);
   line-height: 1.5;
+  border-radius: 0.5rem;
+  padding: 2rem;
+  padding-top: 0;
+}
+
+.tool-list {
+  display: flex;
+  gap: 1rem;
+  align-self: flex-end;
 }
 
 .post-image {
-  width: 100%;
+  width: calc(100% + 4rem);
+  margin: 0 -2rem;
+  border-radius: 0.5rem 0.5rem 0 0;
 }
 
 .post-body > p {
