--- a/src/styles/list.css
+++ b/src/styles/list.css
@@ -7,8 +7,9 @@
   gap: 1rem;
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .category-list > li {
