--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -21,7 +21,17 @@
 }
 
 .link {
+  width: 100%;
+  height: 100%;
   text-decoration: none;
   color: inherit;
   background-color: transparent;
+  white-space: nowrap;
+  padding: 0 1.5rem;
+}
+
+@media (max-width: 800px) {
+  .navbar {
+    gap: 1rem;
+  }
 }
