--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -5,7 +5,7 @@
 .post-card-layout {
   width: auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   justify-items: center;
   gap: 2.5rem;
 }
@@ -21,6 +21,10 @@
   transition:
     transform 0.25s ease,
     box-shadow 0.25s ease;
+}
+
+.card-title {
+  font-size: clamp(1rem, 5vw, 1.25rem);
 }
 
 .card-info {
